# otfcc

./: CMakeLists.txt
dep/: CMakeLists.txt
dep/intl/include/: intl.hpp
dep/nowide/: CMakeLists.txt
dep/sds/include/: sds.h
include/caryll/: element.h
src/bk/: bkblock.h  bkgraph.h
src/libcff/: cff-codecs.c
src/support/: element-impl.h  util.h  vector-impl.h
src/support/buffer/: buffer.c
src/support/json/: json-funcs.h
